[microba] Fix warnings, modernize code
GitOrigin-RevId: df9526dc6454a57966c699bd1353e540336de327