@@ -1,10 +1,10 @@
 package com.michaelbaranov.microba.gradient;
 
-import java.awt.Color;
+import com.michaelbaranov.microba.common.AbstractBoundedTableModel;
+
+import java.awt.*;
 import java.util.ArrayList;
 import java.util.List;
-
-import com.michaelbaranov.microba.common.AbstractBoundedTableModel;
 
 /**
  * A very basic implementation of {@link AbstractBoundedTableModel} used by
@@ -20,77 +20,74 @@ public class DefaultGradientModel extends AbstractBoundedTableModel {
 
   protected static final int COLOR_COLUMN = 1;
 
-  protected List positionList = new ArrayList(32);
+  protected List<Integer> positionList = new ArrayList<>(32);
 
-  protected List colorList = new ArrayList(32);
+  protected List<Color> colorList = new ArrayList<>(32);
 
   /**
    * Constructor.
    */
   public DefaultGradientModel() {
     super();
-    positionList.add(new Integer(0));
+    positionList.add(Integer.valueOf(0));
     colorList.add(Color.YELLOW);
 
-    positionList.add(new Integer(50));
+    positionList.add(Integer.valueOf(50));
     colorList.add(Color.RED);
 
-    positionList.add(new Integer(100));
+    positionList.add(Integer.valueOf(100));
     colorList.add(Color.GREEN);
   }
 
+  @Override
   public int getLowerBound() {
     return 0;
   }
 
+  @Override
   public int getUpperBound() {
     return 100;
   }
 
+  @Override
   public int getRowCount() {
     return positionList.size();
   }
 
+  @Override
   public int getColumnCount() {
     return 2;
   }
 
+  @Override
   public Class getColumnClass(int columnIndex) {
-    switch (columnIndex) {
-    case POSITION_COLUMN:
-      return Integer.class;
-    case COLOR_COLUMN:
-      return Color.class;
-    }
-    return super.getColumnClass(columnIndex);
+    return switch (columnIndex) {
+      case POSITION_COLUMN -> Integer.class;
+      case COLOR_COLUMN -> Color.class;
+      default -> super.getColumnClass(columnIndex);
+    };
   }
 
+  @Override
   public Object getValueAt(int rowIndex, int columnIndex) {
-    switch (columnIndex) {
-    case POSITION_COLUMN:
-      return positionList.get(rowIndex);
-    case COLOR_COLUMN:
-      return colorList.get(rowIndex);
-    }
-    return null;
+    return switch (columnIndex) {
+      case POSITION_COLUMN -> positionList.get(rowIndex);
+      case COLOR_COLUMN -> colorList.get(rowIndex);
+      default -> null;
+    };
   }
 
   /**
    * Adds a color point.
-   * 
-   * @param color
-   * @param position
    */
   public void add(Color color, int position) {
     colorList.add(color);
-    positionList.add(new Integer(position));
+    positionList.add(Integer.valueOf(position));
     fireTableDataChanged();
   }
 
   /**
    * Removes a color point at specified index.
-   * 
-   * @param index
    */
   public void remove(int index) {
     colorList.remove(index);
