@@ -1,13 +1,11 @@
 package com.michaelbaranov.microba.gradienteditor;
 
-import java.awt.Color;
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.swing.ListSelectionModel;
-
 import com.michaelbaranov.microba.common.AbstractBoundedTableModelWithSelection;
 import com.michaelbaranov.microba.marker.MarkerMutationModel;
+
+import java.awt.*;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * A basic implementation of {@link AbstractBoundedTableModelWithSelection} and
@@ -27,22 +25,23 @@ public class DefaultGradientEditorModel extends
 
   public static final int COLOR_COLUMN = 1;
 
-  protected List position = new ArrayList(32);
+  protected List<Integer> position = new ArrayList<>(32);
 
-  protected List color = new ArrayList(32);
+  protected List<Color> color = new ArrayList<>(32);
 
   public DefaultGradientEditorModel() {
     super();
-    setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
+    setSelectionMode(SINGLE_SELECTION);
 
-    position.add(new Integer(0));
+    position.add(Integer.valueOf(0));
     color.add(Color.BLACK);
 
-    position.add(new Integer(255));
+    position.add(Integer.valueOf(255));
     color.add(Color.WHITE);
 
   }
 
+  @Override
   public void removeMarkerAtIndex(int index) {
     if (isSelectedIndex(index)) {
       removeSelectionInterval(index, index);
@@ -53,8 +52,9 @@ public class DefaultGradientEditorModel extends
 
   }
 
+  @Override
   public int addMarkAtPosition(int pos) {
-    position.add(new Integer(pos));
+    position.add(Integer.valueOf(pos));
     color.add(new Color((float) Math.random(), (float) Math.random(),
         (float) Math.random()));
     int index = position.size() - 1;
@@ -62,42 +62,45 @@ public class DefaultGradientEditorModel extends
     return index;
   }
 
+  @Override
   public int getLowerBound() {
     return 0;
   }
 
+  @Override
   public int getUpperBound() {
     return 255;
   }
 
+  @Override
   public int getRowCount() {
     return position.size();
   }
 
+  @Override
   public int getColumnCount() {
     return 2;
   }
 
+  @Override
   public Class getColumnClass(int columnIndex) {
-    switch (columnIndex) {
-    case POSITION_COLUMN:
-      return Integer.class;
-    case COLOR_COLUMN:
-      return Color.class;
-    }
-    return super.getColumnClass(columnIndex);
+    return switch (columnIndex) {
+      case POSITION_COLUMN -> Integer.class;
+      case COLOR_COLUMN -> Color.class;
+      default -> super.getColumnClass(columnIndex);
+    };
   }
 
+  @Override
   public Object getValueAt(int rowIndex, int columnIndex) {
-    switch (columnIndex) {
-    case POSITION_COLUMN:
-      return position.get(rowIndex);
-    case COLOR_COLUMN:
-      return color.get(rowIndex);
-    }
-    return null;
+    return switch (columnIndex) {
+      case POSITION_COLUMN -> position.get(rowIndex);
+      case COLOR_COLUMN -> color.get(rowIndex);
+      default -> null;
+    };
   }
 
+  @Override
   public void setValueAt(Object aValue, int rowIndex, int columnIndex) {
     switch (columnIndex) {
     case POSITION_COLUMN:
@@ -108,18 +111,19 @@ public class DefaultGradientEditorModel extends
         }
 
       position.remove(rowIndex);
-      position.add(rowIndex, aValue);
+      position.add(rowIndex, (Integer)aValue);
       fireTableCellUpdated(rowIndex, columnIndex);
       break;
 
     case COLOR_COLUMN:
       color.remove(rowIndex);
-      color.add(rowIndex, (Color) aValue);
+      color.add(rowIndex, (Color)aValue);
       fireTableCellUpdated(rowIndex, columnIndex);
       break;
     }
   }
 
+  @Override
   public boolean isCellEditable(int rowIndex, int columnIndex) {
     // protecting first 2 rows (first and last marker) from being moved
     return !(columnIndex == POSITION_COLUMN && rowIndex < 2);
